# projeto-vitrine-rust

./: Cargo.toml  Readme.md  produtos.json
src/: main.rs
static/: styles.css
templates/: base.html  cadastro.html  checkout.html  login.html  vitrine.html
